--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "liip/imagine-bundle": "^2.1",
+        "liip/imagine-bundle": "2.0.x-dev",
         "sensio/framework-extra-bundle": "^5.1",
         "sonata-project/admin-bundle": "^3.45",
         "sonata-project/doctrine-orm-admin-bundle": "^3.7",
