--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -5,3 +5,7 @@ vich_uploader:
         products:
             uri_prefix: /uploads/products
             upload_destination: '%kernel.project_dir%/public/uploads/products'
+
+        category:
+            uri_prefix: /uploads/category
+            upload_destination: '%kernel.project_dir%/public/uploads/category'
