--- a/config/packages/sonata_admin.yaml
+++ b/config/packages/sonata_admin.yaml
@@ -3,10 +3,11 @@ sonata_admin:
     dashboard:
         blocks:
             - { type: sonata.admin.block.admin_list, position: left }
+    assets:
+        extra_javascripts:
+            - js/admin.js
 
 sonata_block:
     blocks:
         sonata.admin.block.admin_list:
             contexts: [admin]
-
-
