--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,7 +4,7 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
-    locale: 'ru'
+    locale: 'uk'
     fromEmail: noreply@supershop.com
     fromName: Supershop
     adminEmail: admin@supershop.com
@@ -61,3 +61,8 @@ services:
         arguments: [~, App\Entity\OrderItem, ~]
         tags:
             - { name: sonata.admin, manager_type: orm, show_in_dashboard: false}
+
+    App\Admin\AttributeAdmin:
+        arguments: [~, App\Entity\Attribute, ~]
+        tags:
+            - { name: sonata.admin, manager_type: orm, label: Атрибуты}
