--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,9 @@
         "symfony/web-link": "4.2.*",
         "symfony/yaml": "4.2.*",
         "twig/extensions": "^1.5",
-        "vich/uploader-bundle": "^1.9"
+        "vich/uploader-bundle": "^1.9",
+        "wayforpay/php": "dev-master",
+
     },
     "require-dev": {
         "symfony/debug-pack": "*",
@@ -47,7 +49,8 @@
     "autoload": {
         "psr-4": {
             "App\\": "src/"
-        }
+        },
+        "classmap": ["vendor/wayforpay/php/WayForPay.php"]
     },
     "autoload-dev": {
         "psr-4": {
@@ -83,4 +86,7 @@
             "require": "4.2.*"
         }
     }
+
 }
+
+
