--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,12 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "friendsofsymfony/user-bundle": "^2.1",
+        "gedmo/doctrine-extensions": "^2.4",
         "liip/imagine-bundle": "2.0.x-dev",
         "sensio/framework-extra-bundle": "^5.1",
         "sonata-project/admin-bundle": "^3.45",
         "sonata-project/doctrine-orm-admin-bundle": "^3.7",
+        "stof/doctrine-extensions-bundle": "^1.3",
         "symfony/asset": "4.2.*",
         "symfony/console": "4.2.*",
         "symfony/dotenv": "4.2.*",
